--- a/mypage.html
+++ b/mypage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My page</title>
+    <title>My page - Aman Singh</title>
     <style>
         *{
             margin: 0px;
